# rusty-ransac

./: Cargo.toml  data.csv  data2.csv  data3.csv  data4.csv  gen.py  generate.py  plop.csv
src/: bin.rs  geometry.rs  lib.rs  main.rs
src/regression/: mod.rs
