[package]
name = "ransac"
version = "0.1.0"
authors = ["Fabien-B <fabien.bonneval@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
nalgebra = "0.18.0"
csv = "1.1.1"
serde = { version = "1.0.99", features = ["derive"] }
gnuplot = "0.0.31"
